# latex_gen

./: .gitignore  MANIFEST.in  Makefile  Makefile.old  extra.mk  project.pp1.yaml  pyproject.toml  setup.json  setup.py  setup.py.old
.circleci/: config.yml  latex_gen_tests.tests
src/: .gitignore
src/latex_gen/: __init__.py  compile_latex.py  context.py  document.py  environment.py  envs.py  figure.py  file_utils.py  frags.py  ifs.py  structures.py  tabular.py  utils.py
src/latex_gen/tests/: test_escaping.py  test_idions.py  test_tables.py  utils.py
src/latex_gen/tests/demos/: demo1.py  escaping.py  latex_gen_demos.py  tables.py
src/latex_gen_tests/: test1.py  test_escaping.py  test_idions.py  test_tables.py  utils.py
src/latex_gen_tests/demos/: __init__.py  demo1.py  escaping.py  latex_gen_demos.py  tables.py
