[project]
name = "latex-gen-z7"
version = "7.2"
authors = [{name = "Andrea Censi", email = "AndreaCensi@users.noreply.github.com"}]

[tool.poetry]
name = "latex-gen-z7"
version = "7.2"
description = ""
authors = ["Andrea Censi <AndreaCensi@users.noreply.github.com>"]
packages = [
    {from = "src", include = "latex_gen"},
    ]

[tool.poetry.dependencies]
PyContracts3 = ">=7"
zuper-commons-z7 = "*"

[tool.poetry.group.test.dependencies]

[build-system]
requires = [
    "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"
